# spec-kit-hackathon

./: .gitignore  DEPLOYMENT.md  Dockerfile  test-connection.html  vercel.json
.specify/memory/: constitution.md
agent/: .env.example  api.py  main.py  pyproject.toml  railpack.yaml  railway.toml  requirements.txt  start.sh
backend/: .env.example  .gitignore  main.py  pyproject.toml
history/prompts/001-physical-ai-robotics-textbook/: 001-create-spec-physical-ai-robotics-textbook.spec.prompt.md  001-implement-physical-ai-textbook.green.prompt.md  002-analyze-homepage-sidebar-issue.misc.prompt.md  002-clarify-spec-ambiguities.spec.prompt.md  003-implementation-plan-textbook.plan.prompt.md  004-generate-task-list.tasks.prompt.md
history/prompts/002-embedding-pipeline/: 001-create-embedding-pipeline-spec.spec.prompt.md  002-clarify-embedding-pipeline-spec.spec.prompt.md  (+3 more)
my-book/: docusaurus.config.js  package-lock.json  sidebars.js
my-book/docs/: lesson-01.md  lesson-02.md  lesson-03.md  lesson-04.md  lesson-05.md  lesson-06.md  references.md
physical-ai-textbook/docs/: intro.md
specs/001-physical-ai-robotics-textbook/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-embedding-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-book-rag-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-floating-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-ai-robotics-textbook/: plan.md  spec.md  tasks.md
(+44 files in other folders)
