[project]
name = "book-rag-agent"
version = "0.1.0"
description = "RAG-based chatbot agent for book-related questions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai-agents>=0.0.1",
    "python-dotenv>=1.0.0",
    "cohere>=5.0.0",
    "qdrant-client>=1.7.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]
